--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React Learning",
   "main": "App.js",
   "scripts": {
-    "test": "jest",
+    "test": "Test",
     "start" : "parcel index.html",
     "build" : "parcel build index.html"
   },
