--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "App.js",
   "scripts": {
     "test": "Test",
-    "start" : "parcel index.html",
-    "build" : "parcel build index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "keywords": [
     "react",
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0"
   }
 }
