--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Manoj",
   "license": "ISC",
   "devDependencies": {
+    "buffer": "^6.0.3",
     "parcel": "^2.12.0",
     "postcss": "^8.4.49",
     "process": "^0.11.10",
